--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Michael Leonffu's Portfolio</title>
+    <title>website</title>
     <h1>Place Holder</h1>
   </head>
 </html>
