--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>website</title>
+    <title>beauty</title>
     <h1>waaaaa</h1>
     <h1>hello </h1>
     <p>hola my name is astrid</p>
