--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Beauty</title>
     <h1>waaaaa</h1>
     <h1>hello </h1>
-    <p>hola my name is astrid</p>
+    <p style-font: Georgia> hola my name is astrid</p>
+
   </head>
 </html>
