--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Beauty</title>
-    <h1>waaaaa</h1>
+    <title>Beauty Blog</title>
+    <h1 style-font: Railway> Welcome to the Beauty Blog!</h1>
     <h1>hello </h1>
-    <p style-font: Georgia> hola my name is astrid</p>
 
   </head>
 </html>
