--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Beauty Blog</title>
-    <h1 style-font: Railway> Welcome to the Beauty Blog!</h1>
+    <h1 style-font: 'Railway' > Welcome to the Beauty Blog!</h1>
     <h1>hello </h1>
 
   </head>
