--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="style.css">
     <title>Beauty Blog</title>
     <h1> Welcome to the Beauty Blog!</h1>
+    <p> Cras pulvinar arcu non tellus lacinia, eget vehicula sem blandit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mollis condimentum nisi. Maecenas molestie sed risus nec fermentum. Integer turpis magna, pulvinar non lacus hendrerit, cursus fringilla felis. Maecenas lacus ligula, dignissim in auctor non, fringilla eget orci. Suspendisse bibendum, turpis hendrerit placerat mollis, dui nunc vehicula erat, at sodales tellus magna a lacus. Nunc finibus consectetur diam a tempus. Proin hendrerit ipsum eu elit consequat suscipit. </p>
+
 
   </head>
 </html>
