--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="favicon.png">
-    <title>Beauty Blog</title>
+    <title class="header">Beauty Blog</title>
     <h1> <class:"welcome"> Welcome to the Beauty Blog!</h1>
     <p> <small>Starting a skincare routine has become very popular over the past few years, but with all the products and formulas available it can become tricky to organize your own routine. Every skin care routine starts with the basic 4 that revolve around the personal skin type and targeting factors that pesonalize what products work well and what do not. Depending on your skin type, you will have different components of a skin care routine that will apply to you. Dry, oily, normal, acne-prone, and sensitive skin are up to the most common. More importantly remember, your skin is not a math problem, it doesnt have a definite answer to achieve that beautlily glass skin, skin comes in many different forms and textures!
   Now that that’s out of the way, the 4 basic principles to any skincare routine for any age are, cleanser, toner, moisterizer, and sunscreen. Pricing doesnt determine how good a product is, in fact, some of the best brands are some of the cheapest. Drugstore brands, such as, Neutrogena, Cera-V, and Cetaphil are some of the most commonly used and they produce very good results. One thing we can not stress enough, is the importance of sunscreen. The sun’s rays can be very damaging to your skin, so make sure you are applying sunscreen to your face daily. Creating a skincare routine can be very intimidating with all the different kinds of products and personal needs, but if you break it down, it will become very easy!
