--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
       <h1>Welcome to the Beauty Blog!</h1>
     </div>
 
+    <header>
+      <ul>
+        <li>What's New</li>
+        <li>All Blogs</li>
+        <li>Brands We Love</li>
+        <li>About Us</li>
+      </ul>
+    </header>
+
     <div class= "skincare"> 
       <h3>Building a Skincare Routine</h3>
       <p>Starting a skincare routine has become very popular over the past few years, but with all the products and formulas available it can become tricky to organize your own routine. Every skin care routine starts with the basic 4 that revolve around the personal skin type and targeting factors that pesonalize what products work well and what do not. Depending on your skin type, you will have different components of a skin care routine that will apply to you. Dry, oily, normal, acne-prone, and sensitive skin are up to the most common. More importantly remember, your skin is not a math problem, it doesnt have a definite answer to achieve that beautlily glass skin, skin comes in many different forms and textures!
