--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
     <div>
 
 
-    <div class= "skincare"> 
-      <h3>Building a Skincare Routine</h3>
-      <div class='skincare-image'>
-        <img src="skincare.png">
-      </div>
-      <p>Starting a skincare routine has become very popular over the past few years, but with all the products and formulas available it can become tricky to organize your own routine. Every skin care routine starts with the basic 4 that revolve around the personal skin type and targeting factors that pesonalize what products work well and what do not. Depending on your skin type, you will have different components of a skin care routine that will apply to you. Dry, oily, normal, acne-prone, and sensitive skin are up to the most common. More importantly remember, your skin is not a math problem, it doesnt have a definite answer to achieve that beautlily glass skin, skin comes in many different forms and textures!
-      Now that that’s out of the way, the 4 basic principles to any skincare routine for any age are, cleanser, toner, moisterizer, and sunscreen. Pricing doesnt determine how good a product is, in fact, some of the best brands are some of the cheapest. Drugstore brands, such as, Neutrogena, Cera-V, and Cetaphil are some of the most commonly used and they produce very good results. One thing we can not stress enough, is the importance of sunscreen. The sun’s rays can be very damaging to your skin, so make sure you are applying sunscreen to your face daily. Creating a skincare routine can be very intimidating with all the different kinds of products and personal needs, but if you break it down, it will become very easy!
-      </p>
- </div>
+  <div class= "skincare"> 
+    <h3>Building a Skincare Routine</h3>
+    <div class='skincare-image'>
+      <img src="skincare.png">
+    </div>
+    <p>Starting a skincare routine has become very popular over the past few years, but with all the products and formulas available it can become tricky to organize your own routine. Every skin care routine starts with the basic 4 that revolve around the personal skin type and targeting factors that pesonalize what products work well and what do not. Depending on your skin type, you will have different components of a skin care routine that will apply to you. Dry, oily, normal, acne-prone, and sensitive skin are up to the most common. More importantly remember, your skin is not a math problem, it doesnt have a definite answer to achieve that beautlily glass skin, skin comes in many different forms and textures!
+    Now that that’s out of the way, the 4 basic principles to any skincare routine for any age are, cleanser, toner, moisterizer, and sunscreen. Pricing doesnt determine how good a product is, in fact, some of the best brands are some of the cheapest. Drugstore brands, such as, Neutrogena, Cera-V, and Cetaphil are some of the most commonly used and they produce very good results. One thing we can not stress enough, is the importance of sunscreen. The sun’s rays can be very damaging to your skin, so make sure you are applying sunscreen to your face daily. Creating a skincare routine can be very intimidating with all the different kinds of products and personal needs, but if you break it down, it will become very easy!
+    </p>
+</div>
 
 <div class="makeup">
   <h3> "No Make-up" Make-up Look</h3>
+  <div class='nomakeup-image'>
+    <img src="naturalmakeup.png">
+  </div>
   <p> When wearing makeup, everyone tries to go for a natural look, but what components go into a look that should look like you aren’t wearing any makeup? To create this natural look you will need 6 simply things: concealer, blush, bronzer, highlighter, eyelash curler, and mascara. These six products will give you a natural look that will make you feel ready for the day and more confident. 
   The first step in a natural makeup look is the concealer. Apply the concealer under your eyes to get rid of creases under the eyes and in any trouble areas, such as acne or blotches. The most important thing while doing this step is to make sure you do not apply to much because if too much is applied the makeup will look cakey. Next, you will put blush or bronzer on your cheeks, using an upward motion. Blush would be used more for when you are going out in the middle of the day, while bronzer could be used more during the end of the day, such as during sunsets. Highlighter can take your natural makeup look to the next level. You will apply this product on your upper cheeks and if you would like something extra you could add some to the tip of your nose. This will make your cheekbones look more defined and give you a little sparkle! Now time for the eyes. You will start by curling your eyelashes with the eyelash curler, adn then apply mascara to your upper and lower lashes. Adding the mascara will make your eyes look bigger, which can make a very subtle, big difference. Last but not least, to add a little something extra, you will add a little bit of your highlighter to the insides of your eyes. This will draw attention to your eyes, which can create a big affect on your makeup look.
   After following all these steps, you will have a natural looking makeup look, that will have you ready for any occasion. Look below fo certain brands we suggest on using for your makeup look. 
