--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="favicon.png">
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Marcellus&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wdth,wght@85.9,183&family=Barlow:wght@300&family=Marcellus&display=swap" rel="stylesheet">
+<!--font cheat sheet:
+--Barlow = header tag
+--Marcellus = Title of blogs + Author/date
+--Anek Devanagari = text of blogs-->
 
-    <title>Beauty Blog</title>
+<title>Beauty Blog</title>
 
 <header>
   <ul>
@@ -25,7 +32,7 @@
 
 
   <div class= "skincare"> 
-    <h3>Building a Skincare Routine</h3>
+    <h3 class="title">Building a Skincare Routine</h3>
     <div class='skincare-image'>
       <img src="skincare.png">
     </div>
@@ -35,7 +42,7 @@
 </div>
 
 <div class="makeup">
-  <h3> "No Make-up" Make-up Look</h3>
+  <h3 class="title"> "No Make-up" Make-up Look</h3>
   <div class='nomakeup-image'>
     <img src="naturalmakeup.png">
   </div>
@@ -46,7 +53,7 @@
 </div>
 
  <div class= "hera"> 
-  <h3> HERA Sensual Review</h3>
+  <h3 class="title"> HERA Sensual Review</h3>
   <div class='HERA-image'>
     <img src="HERA.png">
   </div>
