--- a/index.html
+++ b/index.html
@@ -61,5 +61,11 @@
   </p>
 </div>
 
+<footer class="bottom">
+  <li>About us</li>
+  <li>Brands We Love</li>
+  <li>All Blogs</li>
+</footer>
+
   </head>
 </html>
