--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
   <p>The HERA Sensual Fresh Tints are perfect to wear for a night out or for a hangout during the day. These lip tints are lightweight and can last you through the whole day without any smudges. The formula will leave your lips with a dewy finish that will moisturize your lips. The color spreads evenly throughout your lips without clumping. The lip tints are available in eight different colors from nudes, to bright pinks, to mature reds. The different colors include: Betty, Pure Tattoo, Not Fear, Bare Root, lazy Nuha, 90s, Jubilee, and Wild Young. When you add this finishing piece to your look, it will take you makeup to the next level, and have you feeling like a confident queen! 
   </p>
 </div>
+<h3>
+  Return to home -->
+</h3>
 
   </head>
 </html>
